# tenyks-take-home

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
config/: botsort.yaml  clip_reid.yaml  default.yaml  rtdetr_strongsort.yaml  sam2_hybrid.yaml  sam3.yaml
docs/: LABELING.md
src/kiosk_analytics/: __init__.py  analytics.py  config.py  detect.py  eval.py  pipeline.py  sam2_hybrid.py  sam3.py  stitch.py  track.py  tracklets.py  video.py  viz.py  zone.py
tests/: test_analytics.py  test_detect_postproc.py  test_eval.py  test_hygiene.py  test_sam2_hybrid.py  test_stitch.py
tools/: draw_zone.py  extract_frame.py  probe_sam3.py
